<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/discover" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/bookmarks" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/weather" />
        <item
            android:id="@+id/nav_transportation"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/transport_schedule" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
