<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ywca.pentref.fragments.ProfileFragment">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ic_person_black" />

    <TextView
        android:id="@+id/user_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/visitor"
        android:textColor="@color/black"
        android:textSize="18sp" />



    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/facebook_sign_in_button"
        android:layout_marginBottom="20dp" />
    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/facebook_sign_in_button"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_out"
        android:visibility="gone" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_in_button"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/f_admin_sign_in_btn"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:layout_above="@+id/sign_in_button"
            android:layout_alignParentStart="true"
            android:layout_weight="1" />

        <Button
            android:id="@+id/f_admin_sign_out_btn"
            android:text="@string/AdminSignOut"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:layout_alignParentStart="true"
            android:visibility="gone"
            />
    </LinearLayout>

</RelativeLayout>
